# signed-video-framework

./: .clang-format  .gitmodules  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  feature-description.md  meson.build  meson_options.txt  pre-commit.sh  private_ecdsa_key.pem  private_rsa_key.pem
.github/workflows/: approval-workflow.yml  meson-build.yml  meson-full-build.yml  valgrind  valgrind.yml
lib/: README.md  meson.build
lib/plugins/: README.md  meson.build
lib/plugins/single-threaded-signing/: plugin.c
lib/plugins/threaded-signing/: meson.build  plugin.c
lib/plugins/unthreaded-signing/: meson.build  plugin.c
lib/src/: README.md  legacy_validation.h  meson.build  signed_video_authenticity.c  signed_video_authenticity.h  signed_video_defines.h  signed_video_h26x_auth.c  signed_video_h26x_common.c  signed_video_h26x_internal.h  signed_video_h26x_nalu_list.c  signed_video_h26x_nalu_list.h  signed_video_h26x_sign.c  signed_video_internal.h  signed_video_openssl.c  signed_video_openssl_internal.h  signed_video_tlv.c  signed_video_tlv.h  sv_auth.c  sv_authenticity.c  sv_authenticity.h  sv_axis_communications.c  sv_axis_communications.h  sv_axis_communications_internal.h  sv_bu_list.c  sv_bu_list.h  sv_codec_av1.c  sv_codec_h26x.c  sv_codec_internal.h  sv_common.c  sv_defines.h  sv_defines_general.h  sv_h26x_auth.c  sv_h26x_common.c  sv_h26x_internal.h  sv_h26x_nalu_list.c  sv_h26x_nalu_list.h  sv_h26x_sign.c  sv_internal.h  sv_onvif.c  sv_onvif.h  (+5 more)
lib/src/includes/: signed_video_auth.h  signed_video_common.h  signed_video_helpers.h  signed_video_interfaces.h  signed_video_openssl.h  signed_video_sign.h  signed_video_signing_plugin.h  sv_vendor_axis_communications.h
lib/src/legacy/: legacy_auth.c  legacy_bu_list.c  legacy_bu_list.h  legacy_codec_internal.h  legacy_common.c  legacy_h26x_auth.c  legacy_h26x_common.c  legacy_h26x_internal.h  legacy_h26x_nalu_list.c  legacy_h26x_nalu_list.h  legacy_internal.h  legacy_tlv.c  legacy_tlv.h
lib/vendors/: README.md  meson.build
lib/vendors/axis-communications/: meson.build  sv_vendor_axis_communications.c  sv_vendor_axis_communications.h  sv_vendor_axis_communications_internal.h  sv_vendor_axis_communications_internal_tests.h
tests/: README.md  cert_chain.pem  generate-cert.sh  meson.build  private_ecdsa_key.pem  private_rsa_key.pem  test_checks.sh  test_openssl.cnf  wrong_ecdsa_key.pem  wrong_rsa_key.pem
tests/check/: check_codec_av1.c  check_h26xsigned_auth.c  check_h26xsigned_sign.c  check_signed_video_auth.c  check_signed_video_common.c  check_signed_video_sign.c  legacy_test_data.c  meson.build  nalu_list.c  nalu_list.h  signed_video_helpers.c  signed_video_helpers.h  test_helpers.c  test_helpers.h  test_stream.c  test_stream.h
