option('debugprints',
  type : 'boolean',
  value : false,
  description : 'Run with SIGNED_VIDEO_DEBUG flag')
option('signingplugin',
  type : 'string',
  value : 'unthreaded',
  description : 'Select signing plugin; \'unthreaded\' (default), \'threaded\' or \'threaded_unless_check_dep\'')
option('vendors',
  type : 'array',
  choices : ['axis-communications'],
  value : ['axis-communications'],
  #value : [],
  description : 'Select vendor(s) to support. By default all vendors are added.')
