option('debugprints',
  type : 'boolean',
  value : false,
  description : 'Run with SIGNED_VIDEO_DEBUG flag')
option('signingplugin',
  type : 'string',
  value : 'unthreaded',
  description : 'Select signing plugin; \'unthreaded\' (default), \'threaded\' or \'threaded_unless_check_dep\'')
option('parsesei',
  type : 'boolean',
  value : false,
  description : 'Parse SEI frames')
option('generatetestkeys',
  type : 'boolean',
  value : false,
  description : 'Generate signing keys for tests')
