# The Signed Video Framework currently only have one signing plugin.
# For simplicity, we add the file as part of the source files of
# signed-video-framework.

vendor_sources = files(
  'axis-communications/sv_vendor_axis_communications.c',
)

vendor_public_headers = files(
  'axis-communications/sv_vendor_axis_communications.h',
)
